# dog

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
dog/: Cargo.toml
dog/artifacts/: dog-macos-x86_64
dog/src/: cli.rs  main.rs  printer.rs  reader.rs
src/: cli.rs  filter.rs  footer.rs  main.rs  maml_footer.rs  printer.rs  reader.rs  write.rs
tests/: filtering.rs  footer.rs  globbing.rs  maml_footer.rs
tests/fixtures/: test.maml  test.md  test.parquet
