[package]
name = "dog"
version = "0.4.2"
edition = "2021"

[profile.release]
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
fitsio-pure = { version = "0.11.0", features = ["compat"] }
polars = { version = "0.54.4", features = ["parquet", "csv", "dtype-i16", "lazy", "dtype-decimal", "strings"] }
polars-buffer = "0.54.4"
rayon = "1.12.0"
