[package]
name = "dog-tsl"
version = "1.0.0"
edition = "2021"
readme = "README.md"
description = "A fast cli tool for viewing and handling parquet and other file formats."
authors = ["Trystan Lambert <trystan.lambert@uwa.edu.au>"]
license = "MIT"
repository = "https://github.com/TrystanScottLambert/dog"

[[bin]]
path = "src/main.rs"
name = "dog"

[profile.release]
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
fitsio-pure-tsl = { version = "0.0.1", features = ["compat"] }
polars = { version = "0.54.4", features = ["parquet", "csv", "dtype-i16", "lazy", "dtype-decimal", "strings", "streaming", "sql"] }
polars-buffer = "0.54.4"
rayon = "1.12.0"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile = "3.27.0"
